[package]
name = "ofnil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.4.3", features = ["derive"] }
env_logger = "0.10.0"
etcd-rs = "1.0.0"
log = "0.4.17"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_json = "1.0.83"
typetag = "0.2.3"
tokio = { version = "1.36.0", features = ["full"] }
csv = "1.3.0"
async-trait = "0.1.58"
thiserror = "1.0.37"
async-recursion = "1.0.0"
futures = "0.3.25"
regex = "1.9.1"
lazy_static = "1.4.0"
toml = "0.8.0"
dotenv = "0.15.0"
redis = "0.23.0"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
rand = { version = "0.8.5", optional = true }
bb8-bolt = "0.8.0"
strum = { version = "0.25", features = ["derive"] }
rocket = { version = "0.5.0-rc.2", features = ["json"], optional = true }
enum-methods = "0.0.8"

[dev-dependencies]
assert_cmd = "2.0.6"
predicates = "3.0.1"

[features]
default = ["serving"]
serving = ["dep:rand"]
dashboard = ["dep:rocket"]


[[bin]]
name = "backend"
required-features = ["dashboard"]
