[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "ofnil"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "neo4j>=5.3.0",
    "redis>=4.4.0",
    "patchelf>=0.13.0",
]

[project.optional-dependencies]
torch = [
    "torch>=1.13.0",
    "numpy>=1.23.0",
]

[tool.maturin]
python-source = "python"
bindings = "pyo3"

[tool.isort]
profile = "black"
src_paths = ["python"]

[tool.black]
line-length = 120